--- a/config/services.yaml
+++ b/config/services.yaml
@@ -9,6 +9,9 @@ services:
   elenyum_login:
     public: true
     class: 'Elenyum\Authorization\Controller\LoginController'
+  elenyum_registration:
+    public: true
+    class: 'Elenyum\Authorization\Controller\RegistrationController'
 
 #  # makes classes in src/ available to be used as services
 #  # this creates a service per class whose id is the fully-qualified class name
